--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -2,8 +2,8 @@ name: Build and deploy Tweet Mood to an Azure Web App
 
 env:
   AZURE_WEBAPP_NAME: tweetmood    # set this to the name of your Azure Web App
-  AZURE_WEBAPP_PACKAGE_PATH: './Services'      # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '6.0.x'                 # set this to the .NET Core version to use
+  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
+  DOTNET_VERSION: '6.0.x'
 
 on:
   push:
