--- a/Services/Twitter_Sentiment.Api/Properties/launchSettings.json
+++ b/Services/Twitter_Sentiment.Api/Properties/launchSettings.json
@@ -16,7 +16,9 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7159;http://localhost:5189",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "AzureCredentials:AZURE_LANGUAGE_DETECTION_KEY": "0de2e4dd318544b396c5c88899d450bc", 
+        "AzureCredentials:AZURE_LANGUAGE_DETECTION_ENDPOINT": "https://tweetmoodlanguagedetection.cognitiveservices.azure.com/"
       }
     },
     "IIS Express": {
