Build error: AppSettings Updated

--- a/Services/Twitter_Sentiment.Api/appsettings.json
+++ b/Services/Twitter_Sentiment.Api/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AzureCredentials:AZURE_LANGUAGE_DETECTION_KEY": "0de2e4dd318544b396c5c88899d450bc", 
+  "AzureCredentials:AZURE_LANGUAGE_DETECTION_ENDPOINT": "https://tweetmoodlanguagedetection.cognitiveservices.azure.com/",
   "AllowedHosts": "*"
 }
