--- a/Services/Twitter_Sentiment.Api/Properties/launchSettings.json
+++ b/Services/Twitter_Sentiment.Api/Properties/launchSettings.json
@@ -17,8 +17,8 @@
       "applicationUrl": "https://localhost:7159;http://localhost:5189",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "AzureCredentials:AZURE_LANGUAGE_DETECTION_KEY": "0de2e4dd318544b396c5c88899d450bc", 
-        "AzureCredentials:AZURE_LANGUAGE_DETECTION_ENDPOINT": "https://tweetmoodlanguagedetection.cognitiveservices.azure.com/"
+        "AzureCredentials:AZURE_LANGUAGE_DETECTION_KEY": "", 
+        "AzureCredentials:AZURE_LANGUAGE_DETECTION_ENDPOINT": ""
       }
     },
     "IIS Express": {
